fix(Dashboard): do not show scrollbars in edit mode
related to OPT-1168

--- a/client/src/modules/components/DashboardView/DashboardReport/DashboardReport.scss
+++ b/client/src/modules/components/DashboardView/DashboardReport/DashboardReport.scss
@@ -14,6 +14,10 @@
   padding: 10px;
 }
 
+.DashboardReport__visualization--unscrollable {
+  overflow: hidden;
+}
+
 .DashboardReport__header {
   position: absolute;
   top: 0;
