--- a/client/src/modules/components/Table/Table.scss
+++ b/client/src/modules/components/Table/Table.scss
@@ -5,7 +5,7 @@
   flex-direction: column;
 }
 
-.Table__unscrollable-mode {
+.Table__unscrollable-mode .rt-tbody {
   overflow: hidden;
 }
 
